# meetwit

./: .editorconfig  .eslintrc.cjs  .gitattributes  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  RELEASING.md  ROADMAP.md  TERMS.md  clippy.toml  deny.toml  lefthook.yml  package.json  pnpm-lock.yaml  prettier.config.mjs  rust-toolchain.toml  tsconfig.base.json
.github/: dependabot.yml
.github/workflows/: build-windows.yml  build.yml  ci.yml  pages.yml
assets/: make-demo-gif.sh
backend/: README.md  alembic.ini  meetwit-sidecar.spec  pyproject.toml
backend/src/meetwit/: __init__.py  __main__.py  calendar_util.py  config.py  db.py  main.py  mcp_server.py  models.py  sqlite_vec_loader.py
backend/src/meetwit/indexing/: __init__.py  chunker.py  embedder.py  parser.py
backend/src/meetwit/llm/: __init__.py  client.py  prompts.py  providers.py  structured.py
backend/src/meetwit/migrations/: __init__.py  env.py
backend/src/meetwit/migrations/versions/: 2026_05_20_0001-v1_baseline_schema.py  2026_05_20_0002-transcript_chunks.py  2026_05_21_0003-meeting_summary_md.py  2026_05_22_0004-calendar.py  2026_05_24_0005-meeting_summary_language.py  2026_05_24_0006-notes.py  2026_05_24_0007-folders.py  2026_05_24_0008-bge_m3_embeddings.py
backend/src/meetwit/retrieval/: __init__.py  hybrid.py
backend/src/meetwit/routers/: calendar.py  folders.py  knowledge.py  meetings.py  memory.py  notes.py  post_meeting.py
backend/src/meetwit/services/: __init__.py  conflicts.py  indexer.py  post_meeting.py  processes.py  templates.py
backend/tests/: conftest.py  test_calendar.py  test_claude_code_provider.py  test_health.py  test_indexing.py  test_mcp_server.py  test_organize.py  test_post_meeting_cleanup.py  test_retrieval.py  test_schema.py  test_security.py  test_summary_language.py
desktop/: index.html  package.json  tsconfig.json  vite.config.ts
desktop/src/: main.tsx  routeTree.gen.ts  styles.css
desktop/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json
desktop/src-tauri/binaries/python-backend/: .gitkeep
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/icons/: icon.icns
desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  pty.rs  state.rs
desktop/src-tauri/src/asr/: engine.rs  mod.rs  model.rs  streamer.rs
desktop/src-tauri/src/audio/: mic.rs  mixer.rs  mod.rs  ring.rs  system.rs  wav.rs
desktop/src-tauri/src/calendar/: mod.rs  oauth.rs  pkce.rs  store.rs
desktop/src-tauri/src/sidecar/: client.rs  health.rs  manager.rs  mod.rs  runtime.rs
desktop/src-tauri/swift/: SystemAudioTap.swift
desktop/src/components/: ActionItemsTable.tsx  CalendarSettings.tsx  ChatMessage.tsx  ClaudeTerminalHost.tsx  CommandPalette.tsx  FloatingDownloadTile.tsx  InsightsPanel.tsx  LiveMeetingView.tsx  LiveNotesPanel.tsx  Logo.tsx  MeetingCopilot.tsx  MeetingNudge.tsx  MicControls.tsx  ModelDownloadCard.tsx  RecordingBadge.tsx  RecordingPill.tsx  SessionRecovery.tsx  SideNav.tsx  SidebarNotesList.tsx  SidebarSearch.tsx  SystemAudioControls.tsx  TerminalPanel.tsx  ToastStack.tsx  TodayMeetings.tsx  TwoPaneSplitter.tsx  WaveformBars.tsx
desktop/src/components/editor/: EditorToolbar.tsx  SlashMenu.tsx  SummaryEditor.tsx
desktop/src/components/modals/: EditTitleModal.tsx  LanguagePickerModal.tsx  MergeMeetingModal.tsx  Modal.tsx  RetranscribeModal.tsx  TemplatePickerModal.tsx
desktop/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  Empty.tsx  Input.tsx  Listening.tsx  Select.tsx  Spinner.tsx  Tabs.tsx  Toolbar.tsx  index.ts
desktop/src/lib/: backend.ts  export.ts  languages.ts  meetingLifecycle.ts  prefs.ts  tauri.ts  transcript.ts  useBackendReady.ts  useInsightsWatcher.ts
desktop/src/routes/: __root.tsx  index.tsx  knowledge.tsx  meeting.$id.summary.tsx  meeting.live.tsx  memory.tsx  onboarding.tsx  settings.tsx  tasks.tsx
desktop/src/stores/: index.ts  meetingStore.ts
docs/: ARCHITECTURE.md  BUILDING.md  CONTRIBUTING.md  INTEGRATIONS_ROADMAP.md  MEETILY_GAP_ANALYSIS.md  MEETILY_ISSUES_DIFFERENTIATORS.md  PRIVACY.md  SIGNING.md  THREAT_MODEL.md  UX_OVERHAUL.md  UX_UPGRADE_MEETILY_ALIGNMENT.md  V1_ACCEPTANCE.md
docs-oauth/: DEMO_VIDEO_PLAN.md
docs/DECISIONS/: 0001-stack.md  0002-monorepo.md  0003-sidecar.md  0004-calendar-integration.md  0005-auto-detect-meetings.md  0006-speaker-diarization.md
docs/weekly/: w01.md  w02.md  w03.md  w04.md  w05.md  w06.md  w07.md  w08.md  w09.md  w10.md  w11.md  w12.md  w13.md  w14.md  w15.md  w16.md
sample-docs/: discount-policy.md  refund-policy.md  shipping-policy.md  team-decisions-q1.md
scripts/: bootstrap.sh  build-release.sh  dev.sh  test.sh
site/: CNAME  index.html  privacy.html  terms.html
