[workspace]
resolver = "2"
members = ["desktop/src-tauri"]

[workspace.package]
version = "0.0.1"
edition = "2021"
authors = ["Meetwit contributors"]
license = "MIT"
repository = "https://github.com/emretheus/meetwit"
homepage = "https://github.com/emretheus/meetwit"
rust-version = "1.83"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that fire too often without value
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"               # backtick-every-identifier is noise
redundant_closure_for_method_calls = "allow"
cast_possible_truncation = "allow"   # we handle these case-by-case
cast_possible_wrap = "allow"         # ditto
cast_sign_loss = "allow"
cast_lossless = "allow"
uninlined_format_args = "warn"       # keep — actually catches readability issues

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
