[workspace]
resolver = "2"
members = ["desktop/src-tauri"]

[workspace.package]
version = "1.0.1"
edition = "2024"
authors = ["Meetwit contributors"]
license = "MIT"
repository = "https://github.com/emretheus/meetwit"
homepage = "https://github.com/emretheus/meetwit"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "deny"
unused_must_use = "deny"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
# Pedantic exceptions that fire too often without value
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
must_use_candidate = "allow"
doc_markdown = "allow"               # backtick-every-identifier is noise
redundant_closure_for_method_calls = "allow"
cast_possible_truncation = "allow"
cast_possible_wrap = "allow"
cast_sign_loss = "allow"
cast_lossless = "allow"
cast_precision_loss = "allow"
needless_pass_by_value = "allow"     # passing-by-value into closures fires constantly
too_many_lines = "allow"             # 100-line cap is too tight for stream-builder fns
case_sensitive_file_extension_comparisons = "allow"
unnecessary_wraps = "allow"
uninlined_format_args = "warn"       # keep — actually catches readability issues

# Pin cpal to a mainline commit that supports WASAPI loopback capture (opening
# an input stream on an output device) — needed for Windows system-audio capture
# (see desktop/src-tauri/src/audio/system.rs). Same 0.15.3 line as the crates.io
# release, just newer; the commit also carries a macOS non-default-output fix
# (#946), so it's a safe superset for the macOS mic path too. Must live at the
# workspace root (cargo ignores [patch] in member crates).
[patch.crates-io]
cpal = { git = "https://github.com/RustAudio/cpal", rev = "51c3b43" }

[profile.release]
codegen-units = 1
lto = "thin"
strip = "symbols"
opt-level = 3

[profile.dev]
opt-level = 0
debug = true
