[project]
name = "meetwit-sidecar"
version = "1.0.0"
description = "Meetwit Python sidecar — FastAPI backend for storage, RAG, and LLM orchestration."
readme = "README.md"
requires-python = ">=3.13,<3.15"
license = { text = "MIT" }
authors = [{ name = "Meetwit contributors" }]
dependencies = [
    "fastapi>=0.115,<0.137",
    "uvicorn[standard]>=0.32,<0.49",
    "pydantic>=2.10,<2.14",
    "pydantic-settings>=2.7,<2.15",
    "sqlalchemy==2.0.*",
    "aiosqlite>=0.20,<0.23",
    "sqlite-vec==0.1.9",
    "httpx==0.28.*",
    "structlog>=24,<26",
    "alembic>=1.14,<1.19",
    "greenlet==3.*",  # required by sqlalchemy async on Python 3.13
    # Document parsing
    "pymupdf>=1.25,<1.28",
    "python-docx>=1.1,<1.3",
    "markdown-it-py>=3.0,<4.3",
    # Embeddings
    "sentence-transformers>=3.3,<5.6",
    # Search
    "rank-bm25==0.2.*",
    # LLM
    "ollama>=0.4,<0.7",
    "sse-starlette>=2.1,<3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "httpx>=0.28",
    "ruff>=0.8",
    "mypy>=1.13",
    "pyinstaller>=6.11",
]

[project.scripts]
meetwit-sidecar = "meetwit.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/meetwit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-ra -q --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py313"
extend-exclude = ["src/meetwit/migrations/versions"]

[tool.ruff.lint]
select = [
    "E", "F",       # pycodestyle, pyflakes
    "I",            # isort
    "UP",           # pyupgrade
    "B",            # bugbear
    "SIM",          # simplify
    "RUF",          # ruff-specific
    "N",            # pep8-naming
    "C4",           # comprehensions
    "PIE",          # misc
    "PTH",          # pathlib
]
ignore = [
    "E501",         # line length handled by formatter
]

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.13"
strict = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_return_any = true
disallow_untyped_defs = true
no_implicit_optional = true
files = ["src/meetwit"]

[[tool.mypy.overrides]]
module = [
    "sqlite_vec.*",
    "pymupdf.*",
    "docx.*",
    "sentence_transformers.*",
    "markdown_it.*",
    "rank_bm25.*",
    "ollama.*",
]
ignore_missing_imports = true
