[package]
name = "meetwit"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
description = "Meetwit — privacy-first AI meeting assistant for macOS"

[lints]
workspace = true

[lib]
# Library target so Tauri's mobile target generator (if ever enabled) can link.
name = "meetwit_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
dirs = "5"
once_cell = "1"
nix = { version = "0.29", features = ["signal"] }
cpal = "0.15"
hound = "3"
parking_lot = "0.12"
rubato = "0.15"
# Mic loudness normalization (EBU R128 / -23 LUFS), ported from Meetily's
# enhancement pipeline so hot/quiet/clipped mics still transcribe.
ebur128 = "0.1"
whisper-rs = { version = "0.13", default-features = false, features = ["metal", "coreml"] }
# (Silero/ONNX VAD removed: ort 2.0-rc returned zero speech detections on real
# audio in release builds. ASR now uses an RMS energy VAD — see asr/streamer.rs.)
sha2 = "0.10"
tokio-stream = "0.1"
futures-util = "0.3"
# Calendar OAuth (ADR-0004): Keychain for the refresh token, base64url for PKCE,
# rand for the code_verifier + CSRF state nonce.
keyring = { version = "3", features = ["apple-native"] }
base64 = "0.22"
rand = "0.8"
serde_urlencoded = "0.7"
# Auto-detect meetings (ADR-0005): native macOS notification nudges.
tauri-plugin-notification = "2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
